[baxtereus/CMakeLists.txt] install test directory

--- a/jsk_baxter_robot/baxtereus/CMakeLists.txt
+++ b/jsk_baxter_robot/baxtereus/CMakeLists.txt
@@ -58,7 +58,7 @@ if(NOT EXISTS ${PROJECT_SOURCE_DIR}/baxter.l)
 endif()
 
 
-install(DIRECTORY euslisp
+install(DIRECTORY euslisp test
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
   USE_SOURCE_PERMISSIONS)
 
