--- a/jsk_pr2_robot/jsk_pr2_startup/package.xml
+++ b/jsk_pr2_robot/jsk_pr2_startup/package.xml
@@ -64,6 +64,7 @@
   <run_depend>pr2_arm_kinematics</run_depend>
   <run_depend>safe_teleop_base</run_depend>
   <run_depend>mongodb_log</run_depend>
+  <run_depend>face_recognition</run_depend>
   <export>
     <rqt_gui plugin="${prefix}/plugin.xml"/>
   </export>
