--- a/jsk_pepper_robot/jsk_pepper_startup/package.xml
+++ b/jsk_pepper_robot/jsk_pepper_startup/package.xml
@@ -22,7 +22,7 @@
   <run_depend>pepper_bringup</run_depend>
   <run_depend>pepper_description</run_depend>
   <run_depend>topic_tools</run_depend>
-  <run_depend>turtlebot_teleop</run_depend>
+  <run_depend>teleop_twist_joy</run_depend>
   <run_depend>image_view</run_depend>
   <run_depend>roseus</run_depend>
   <run_depend>rostwitter</run_depend>
