--- a/jsk_naoqi_robot/peppereus/package.xml
+++ b/jsk_naoqi_robot/peppereus/package.xml
@@ -11,20 +11,13 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>diagnostic_aggregator</build_depend>
-  <build_depend>naoqi_driver</build_depend>
-  <build_depend>nao_interaction_msgs</build_depend>
   <build_depend>pepper_bringup</build_depend>
-  <build_depend>pr2eus</build_depend> <!-- for robot interface -->
+  <build_depend>naoqieus</build_depend> <!-- for robot interface -->
   <build_depend>pepper_description</build_depend>
-  <build_depend>euscollada</build_depend>
   <build_depend>rostest</build_depend>
 
-  <run_depend>diagnostic_aggregator</run_depend>
-  <run_depend>naoqi_driver</run_depend>
-  <run_depend>nao_interaction_msgs</run_depend>
   <run_depend>pepper_bringup</run_depend>
-  <run_depend>pr2eus</run_depend> <!-- for robot interface -->
+  <run_depend>naoqi</run_depend> <!-- for robot interface -->
   <run_depend>pepper_description</run_depend>
 
   <export>
