[jsk_robot_startup] Add distribution_feedback_minimum_sigma, limit minimum sigma for check distribution error and do not execute feedback when feedback_odom has too small distribution

--- a/jsk_robot_common/jsk_robot_startup/config/OdometryFeedbackWrapperReconfigure.cfg
+++ b/jsk_robot_common/jsk_robot_startup/config/OdometryFeedbackWrapperReconfigure.cfg
@@ -11,6 +11,7 @@ gen.add("sigma_z", double_t, 0, "sigma of distribution on z velocity", 0.3, 0.00
 gen.add("sigma_roll", double_t, 0, "sigma of distribution on roll angular velocity", 0.3, 0.0001, 10.0)
 gen.add("sigma_pitch", double_t, 0, "sigma of distribution on pitch angular velocity", 0.3, 0.0001, 10.0)
 gen.add("sigma_yaw", double_t, 0, "sigma of distribution on yaw angular velocity", 0.3, 0.0001, 10.0)
-gen.add("feedback_enabled_sigma", double_t, 0, "Odometry feedback is enabled when sigma is larger than this value", 0.0001, 0.3, 10.0)
+gen.add("force_feedback_sigma", double_t, 0, "Odometry feedback is forcely enabled when sigma is larger than this value", 0.0001, 0.3, 10.0)
+gen.add("distribution_feedback_minimum_sigma", double_t, 0, "Distribution check is enabled when sigma is larger than this value", 0.0001, 0.3, 10.0)
 
 exit(gen.generate(PACKAGE, "odometry_feedback_wrapper_reconfigure", "OdometryFeedbackWrapperReconfigure"))
