naoeus,peppereus: package.xml: fix typo in run_depend, naoqi->naoqieus, nap_apps->nao_apps

--- a/jsk_naoqi_robot/naoeus/package.xml
+++ b/jsk_naoqi_robot/naoeus/package.xml
@@ -11,13 +11,13 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>nap_apps</build_depend>
+  <build_depend>nao_apps</build_depend>
   <build_depend>naoqieus</build_depend> <!-- for robot interface -->
   <build_depend>nao_description</build_depend>
   <build_depend>rostest</build_depend>
 
   <run_depend>nao_apps</run_depend>
-  <run_depend>naoqi</run_depend> <!-- for robot interface -->
+  <run_depend>naoqieus</run_depend> <!-- for robot interface -->
   <run_depend>nao_description</run_depend>
 
   <export>
