--- a/jsk_naoqi_robot/peppereus/package.xml
+++ b/jsk_naoqi_robot/peppereus/package.xml
@@ -17,7 +17,7 @@
   <build_depend>rostest</build_depend>
 
   <run_depend>pepper_bringup</run_depend>
-  <run_depend>naoqi</run_depend> <!-- for robot interface -->
+  <run_depend>naoqieus</run_depend> <!-- for robot interface -->
   <run_depend>pepper_description</run_depend>
 
   <export>
