[jsk_robot_startup] Enable twist filter in HRP2JSKNT

--- a/jsk_robot_common/jsk_robot_startup/config/HRP2JSKNT_odometry_params.yaml
+++ b/jsk_robot_common/jsk_robot_startup/config/HRP2JSKNT_odometry_params.yaml
@@ -14,5 +14,9 @@ viso_odom_calculator:
 biped_particle_odometry:
   particle_num: 80
   rate: 50
-  source_skip_dt: 0.075
+
+biped_odometry_offset:
+  use_twist_filter: true
+  filter_buffer_size: 5
+  
   
