--- a/jsk_pr2_robot/jsk_pr2_startup/package.xml
+++ b/jsk_pr2_robot/jsk_pr2_startup/package.xml
@@ -63,6 +63,10 @@
   <run_depend>pr2_arm_kinematics</run_depend>
   <run_depend>safe_teleop_base</run_depend>
   <run_depend>face_recognition</run_depend>
+  <run_depend>semantic_point_annotator</run_depend>
+  <run_depend>pr2_gazebo</run_depend>
+  <run_depend>pr2_navigation</run_depend>
+
   <export>
     <rqt_gui plugin="${prefix}/plugin.xml"/>
   </export>
