[jsk_robot_startup] Remove use_imu option from launch files and describe in config file

--- a/jsk_robot_common/jsk_robot_startup/config/HRP2JSKNT_odometry_params.yaml
+++ b/jsk_robot_common/jsk_robot_startup/config/HRP2JSKNT_odometry_params.yaml
@@ -14,6 +14,7 @@ viso_odom_calculator:
 biped_particle_odometry:
   particle_num: 80
   rate: 50
+  use_imu: true
 
 biped_odometry_offset:
   use_twist_filter: true
