[jsk_pr2_startup] Update maintainer

--- a/jsk_pr2_robot/jsk_pr2_startup/package.xml
+++ b/jsk_pr2_robot/jsk_pr2_startup/package.xml
@@ -5,6 +5,7 @@
      jsk_pr2_startup
   </description>
   <maintainer email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</maintainer>
+  <maintainer email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</maintainer>
   <license>BSD</license>
   <url>http://ros.org/wiki/jsk_pr2_startup</url>
   <buildtool_depend>catkin</buildtool_depend>
