[jsk_pr2_startup/package.xml] add eusurdf to run_depend
ref: https://github.com/jsk-ros-pkg/jsk_robot/issues/512

--- a/jsk_pr2_robot/jsk_pr2_startup/package.xml
+++ b/jsk_pr2_robot/jsk_pr2_startup/package.xml
@@ -66,6 +66,7 @@
   <run_depend>semantic_point_annotator</run_depend>
   <run_depend>pr2_gazebo</run_depend>
   <run_depend>pr2_navigation</run_depend>
+  <run_depend>eusurdf</run_depend>
 
   <export>
     <rqt_gui plugin="${prefix}/plugin.xml"/>
