--- a/jsk_pr2_robot/jsk_pr2_startup/jsk_pr2_move_base/local_costmap_params.yaml
+++ b/jsk_pr2_robot/jsk_pr2_startup/jsk_pr2_move_base/local_costmap_params.yaml
@@ -30,12 +30,11 @@ passing:
 publish_voxel_map: true
 global_frame: odom_combined
 robot_base_frame: base_footprint
-# update_frequency: 5.0
-# publish_frequency: 2.0
+publish_frequency: 2.0
 static_map: false
 rolling_window: true
-width: 6.0 # 3.0
-height: 6.0 # 3.0
+width: 4.0 # 3.0
+height: 4.0 # 3.0
 resolution: 0.025 # 0.06
 origin_x: 0.0
 origin_y: 0.0
