[roseus_remote] Fix missing configurations
See
  - https://github.com/ros/ros_tutorials/blob/jade-devel/roscpp_tutorials/CMakeLists.txt
  - https://github.com/ros/ros_tutorials/blob/jade-devel/roscpp_tutorials/package.xml

Lint tool to check this kind of things

  - https://github.com/fkie/catkin_lint

Modified:
  - jsk_robot_common/roseus_remote/CMakeLists.txt
  - jsk_robot_common/roseus_remote/package.xml

--- a/jsk_robot_common/roseus_remote/CMakeLists.txt
+++ b/jsk_robot_common/roseus_remote/CMakeLists.txt
@@ -5,6 +5,7 @@ find_package(catkin REQUIRED COMPONENTS
   jsk_network_tools
   std_msgs
   roseus
+  message_generation
 )
 
 add_message_files(
@@ -20,7 +21,7 @@ generate_messages(
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES jskeus_remote
-#  CATKIN_DEPENDS jsk_network_tools jskeus
+   CATKIN_DEPENDS message_runtime std_msgs
 #  DEPENDS system_lib
 )
 
