--- a/jsk_robot_common/roseus_remote/package.xml
+++ b/jsk_robot_common/roseus_remote/package.xml
@@ -14,6 +14,7 @@
   <build_depend>jsk_network_tools</build_depend>
   <build_depend>roseus</build_depend>
   <build_depend>std_msgs</build_depend>
+  <run_depend>message_runtime</run_depend>
   <run_depend>jsk_network_tools</run_depend>
   <run_depend>roseus</run_depend>
   <run_depend>std_msgs</run_depend>
