--- a/jsk_robot_common/jsk_robot_startup/config/JAXON_RED_odometry_params.yaml
+++ b/jsk_robot_common/jsk_robot_startup/config/JAXON_RED_odometry_params.yaml
@@ -1,12 +1,5 @@
 viso_odom_calculator:
   rate: 5
-  sigma_x: 0.1
-  sigma_y: 0.1
-  sigma_z: 0.5
-  sigma_roll: 0.5
-  sigma_pitch: 0.5
-  sigma_yaw: 0.1
-  twist_proportional_sigma: true
   force_feedback_sigma: 1.0
   distribution_feedback_minimum_sigma: 0.1
   max_feedback_time: 0
@@ -14,22 +7,35 @@ viso_odom_calculator:
 biped_particle_odometry:
   particle_num: 30
   rate: 80
+  use_imu: true
+
+# use 2015-12-19-14-14-24 velocity model
+viso_odometry_offset:
+  use_twist_filter: false
+  overwrite_pdf: true
+  twist_proportional_sigma: false
+  sigma_x: 0.017
+  sigma_y: 0.064
+  sigma_z: 0.3
+  sigma_roll: 0.3
+  sigma_pitch: 0.3
+  sigma_yaw: 0.05
+  mean_x: 0.0
+  mean_y: -0.002
+  mean_yaw: -0.002
 
 biped_odometry_offset:
   use_twist_filter: true
   filter_buffer_size: 10
   calculate_covariance: true
   twist_proportional_sigma: false
-  sigma_x: 0.1
-  sigma_y: 0.05
+  overwrite_pdf: true
+  sigma_x: 0.02
+  sigma_y: 0.072
   sigma_z: 0.001
   sigma_roll: 0.001
   sigma_pitch: 0.001
-  sigma_yaw: 0.17
-  # twist_proportional_sigma: false  
-  # sigma_x: 1.5
-  # sigma_y: 0.75
-  # sigma_z: 0.001
-  # sigma_roll: 0.001
-  # sigma_pitch: 0.001
-  # sigma_yaw: 1.2
+  sigma_yaw: 0.05
+  mean_x: 0.006
+  mean_y: 0.001
+  mean_yaw: 0.0
