--- a/jsk_robot_common/jsk_robot_startup/config/HRP2JSKNT_odometry_params.yaml
+++ b/jsk_robot_common/jsk_robot_startup/config/HRP2JSKNT_odometry_params.yaml
@@ -1,23 +1,36 @@
 viso_odom_calculator:
   rate: 5
-  sigma_x: 1.0
-  sigma_y: 1.0
-  sigma_z: 1.0
-  sigma_roll: 0.5
-  sigma_pitch: 0.5
-  sigma_yaw: 0.5
-  twist_proportional_sigma: true
   force_feedback_sigma: 1.0
   distribution_feedback_minimum_sigma: 0.1
   max_feedback_time: 0
 
 biped_particle_odometry:
-  particle_num: 80
+  particle_num: 30
   rate: 50
   use_imu: true
+
+# use 2015-12-19-14-14-24 velocity model
+viso_odometry_offset:
+  use_twist_filter: false
+  overwrite_pdf: true
+  twist_proportional_sigma: false
+  sigma_x: 0.017
+  sigma_y: 0.064
+  sigma_z: 0.3
+  sigma_roll: 0.3
+  sigma_pitch: 0.3
+  sigma_yaw: 0.05
 
 biped_odometry_offset:
   use_twist_filter: true
   filter_buffer_size: 10
-  
+  calculate_covariance: true
+  twist_proportional_sigma: false
+  overwrite_pdf: true
+  sigma_x: 0.02
+  sigma_y: 0.072
+  sigma_z: 0.001
+  sigma_roll: 0.001
+  sigma_pitch: 0.001
+  sigma_yaw: 0.05
   
