add jsk_network_tools to find_package to generate roseus messages

--- a/jsk_robot_common/jsk_robot_utils/CMakeLists.txt
+++ b/jsk_robot_common/jsk_robot_utils/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.8.3)
 project(jsk_robot_utils)
 
 find_package(catkin REQUIRED COMPONENTS
-  roseus pr2eus rostest)
+  jsk_network_tools roseus pr2eus rostest)
 
 catkin_package(
   DEPENDS
