jsk_pepper_startup: enable test https://github.com/furushchev/jsk_robot/commit/4b39a93b972008f5155e27a201b67a061c527a26

--- a/jsk_naoqi_robot/jsk_pepper_startup/package.xml
+++ b/jsk_naoqi_robot/jsk_pepper_startup/package.xml
@@ -13,6 +13,7 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <run_depend>joy</run_depend>
+  <run_depend>naoqi_apps</run_depend>
   <run_depend>naoqi_bridge</run_depend>
   <run_depend>naoqi_dashboard</run_depend>
   <run_depend>nao_apps</run_depend>
