--- a/jsk_naoqi_robot/jsk_pepper_startup/CMakeLists.txt
+++ b/jsk_naoqi_robot/jsk_pepper_startup/CMakeLists.txt
@@ -11,5 +11,7 @@ install(DIRECTORY launch nodes sample
 
 if(CATKIN_ENABLE_TESTING AND NOT $ENV{ROS_DISTRO} STREQUAL "hydro")
   find_package(catkin REQUIRED COMPONENTS rostest roslaunch)
-#  roslaunch_add_file_check(launch/jsk_pepper_startup.launch "ROS_IP=10.68.0.2 NAO_IP=10.68.0.3")
+  # https://github.com/ros/ros_comm/pull/730
+  set(roslaunch_check_script ${PROJECT_SOURCE_DIR}/script/roslaunch-check)
+  roslaunch_add_file_check(launch/jsk_pepper_startup.launch "ROS_IP=10.68.0.2 NAO_IP=10.68.0.3")
 endif()
