--- a/jsk_naoqi_robot/jsk_pepper_startup/package.xml
+++ b/jsk_naoqi_robot/jsk_pepper_startup/package.xml
@@ -16,6 +16,7 @@
   <run_depend>naoqi_apps</run_depend>
   <run_depend>naoqi_bridge</run_depend>
   <run_depend>naoqi_dashboard</run_depend>
+  <run_depend>naoqi_pose</run_depend>
   <run_depend>nao_apps</run_depend>
   <run_depend>nao_interaction_launchers</run_depend>
   <run_depend>nao_interaction_msgs</run_depend>
