--- a/jsk_pr2_robot/jsk_pr2_startup/package.xml
+++ b/jsk_pr2_robot/jsk_pr2_startup/package.xml
@@ -67,6 +67,17 @@
   <run_depend>pr2_gazebo</run_depend>
   <run_depend>pr2_navigation</run_depend>
   <run_depend>eusurdf</run_depend>
+  <run_depend>pr2_navigation_perception</run_depend>
+  <run_depend>pr2_navigation_config</run_depend>
+  <run_depend>jsk_maps</run_depend>
+  <run_depend>jsk_android_gui_api9</run_depend>
+  <run_depend>face_recognition</run_depend>
+  <run_depend>pr2_move_base</run_depend>
+  <run_depend>jsk_smart_gui</run_depend>
+  <run_depend>pr2_arm_kinematics</run_depend>
+  <run_depend>pr2_tuck_arms_action</run_depend>
+  <run_depend>safe_teleop_base</run_depend>
+  <run_depend>pr2_teleop_general</run_depend>
 
   <export>
     <rqt_gui plugin="${prefix}/plugin.xml"/>
