Install jsk_baxter_tools

--- a/jsk_baxter_robot/jsk_baxter_startup/CMakeLists.txt
+++ b/jsk_baxter_robot/jsk_baxter_startup/CMakeLists.txt
@@ -17,7 +17,7 @@ include_directories(
 catkin_add_env_hooks(99.jsk_baxter_startup SHELLS bash zsh
   DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/env-hooks)
 
-install(DIRECTORY config jsk_baxter_joy jsk_baxter_lifelog jsk_baxter_moveit jsk_baxter_sensors
+install(DIRECTORY config jsk_baxter_joy jsk_baxter_lifelog jsk_baxter_moveit jsk_baxter_sensors jsk_baxter_tools
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
   USE_SOURCE_PERMISSIONS)
 
