--- a/jsk_fetch_robot/fetcheus/fetch.yaml
+++ b/jsk_fetch_robot/fetcheus/fetch.yaml
@@ -18,3 +18,8 @@ head:
 
 angle-vector:
   reset-pose : [2.86479, 75.6304, 80.2141, -11.4592, 98.5487, 0.0, 95.111, 0.0, 0.0, 0.0]
+
+rarm-end-coords:
+  parent : gripper_link
+  translate : [0, 0, 0]
+  rotate : [0, 0, 1, 0]
