--- a/jsk_pr2_robot/jsk_pr2_startup/CMakeLists.txt
+++ b/jsk_pr2_robot/jsk_pr2_startup/CMakeLists.txt
@@ -14,9 +14,12 @@ catkin_add_env_hooks(99.jsk_pr2_startup SHELLS bash zsh
 
 install(DIRECTORY config jsk_pr2_image_transport
   jsk_pr2_joy jsk_pr2_lifelog jsk_pr2_move_base jsk_pr2_moveit
-  jsk_pr2_sensors jsk_pr2_warning src
+  jsk_pr2_sensors jsk_pr2_warning src sample
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
 
-install(FILES install_pr1040_description.sh jsk_pr2.machine plugin.xml
-  pr2.launch pr2_bringup.launch pr2_jsk_interactive.launch 	rviz.launch startup.app
+install(DIRECTORY .
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+  FILES_MATCHING PATTERN "*.launch")
+
+install(FILES install_pr1040_description.sh jsk_pr2.machine plugin.xml startup.app
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
