[jsk_robot_startup] Add jsk_recognition_msgs to dependency because of histgram msgs

--- a/jsk_robot_common/jsk_robot_startup/package.xml
+++ b/jsk_robot_common/jsk_robot_startup/package.xml
@@ -21,6 +21,7 @@
   <run_depend>dynamic_reconfigure</run_depend>
   <run_depend>gmapping</run_depend>
   <run_depend>pointcloud_to_laserscan</run_depend>
+  <run_depend>jsk_recognition_msgs</run_depend>
   <export>
   </export>
 </package>
