--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,47 @@
-language:
-  - cpp
-  - python
-python:
-  - "2.7"
-compiler:
-  - gcc
+language: python
+cache:
+  directories:
+    - $HOME/.ccache
+sudo: required
+virtualenv:
+  system_site_packages: true
 notifications:
   email:
     on_success: always
     on_failure: always
   slack: jsk-robotics:Av7tc8wj3IWkLYvlTzHE7x2g
 env:
-  - ROS_DISTRO=hydro  ROSWS=wstool BUILDER=catkin    USE_DEB=true
-  - ROS_DISTRO=hydro  ROSWS=wstool BUILDER=catkin    USE_DEB=false NOT_TEST_INSTALL=true EXTRA_DEB="ros-hydro-convex-decomposition ros-hydro-ivcon"
-  - ROS_DISTRO=indigo  ROSWS=wstool BUILDER=catkin   USE_DEB=true
-  - ROS_DISTRO=indigo  ROSWS=wstool BUILDER=catkin   USE_DEB=false NOT_TEST_INSTALL=true EXTRA_DEB="ros-indigo-convex-decomposition ros-indigo-ivcon"
+  global:
+    - ROSWS=wstool
+    - BUILDER=catkin
+    - USE_TRAVIS=true
+    - ROS_PARALLEL_JOBS="-j2"
+    - CATKIN_PARALLEL_JOBS="-p2"
+    - ROS_PARALLEL_TEST_JOBS="-j4"
+    - CATKIN_PARALLEL_TEST_JOBS="-p1"
 matrix:
+  fast_finish: true
+  include:
+    - dist: precise
+      env: ROS_DISTRO=hydro  ROSWS=wstool BUILDER=catkin    USE_DEB=true CATKIN_TOOLS_BUILD_OPTIONS="-iv --summarize --limit-status-rate 0.002"
+    - dist: precise
+      env: ROS_DISTRO=hydro  ROSWS=wstool BUILDER=catkin    USE_DEB=false NOT_TEST_INSTALL=true EXTRA_DEB="ros-hydro-convex-decomposition ros-hydro-ivcon" CATKIN_TOOLS_BUILD_OPTIONS="-iv --summarize --limit-status-rate 0.002"
+    - dist: trusty
+      env: ROS_DISTRO=indigo  ROSWS=wstool BUILDER=catkin   USE_DEB=true CATKIN_TOOLS_BUILD_OPTIONS="--summarize --limit-status-rate 0.002"
+    - dist: trusty
+      env: ROS_DISTRO=indigo  ROSWS=wstool BUILDER=catkin   USE_DEB=false NOT_TEST_INSTALL=true EXTRA_DEB="ros-indigo-convex-decomposition ros-indigo-ivcon" CATKIN_TOOLS_BUILD_OPTIONS="--summarize --limit-status-rate 0.002"
   allow_failures:
-    - env: ROS_DISTRO=hydro  ROSWS=wstool BUILDER=catkin    USE_DEB=false NOT_TEST_INSTALL=true EXTRA_DEB="ros-hydro-convex-decomposition ros-hydro-ivcon"
-    - env: ROS_DISTRO=indigo  ROSWS=wstool BUILDER=catkin   USE_DEB=false NOT_TEST_INSTALL=true EXTRA_DEB="ros-indigo-convex-decomposition ros-indigo-ivcon"
+    - dist: precise
+      env: ROS_DISTRO=hydro  ROSWS=wstool BUILDER=catkin    USE_DEB=false NOT_TEST_INSTALL=true EXTRA_DEB="ros-hydro-convex-decomposition ros-hydro-ivcon" CATKIN_TOOLS_BUILD_OPTIONS="-iv --summarize --limit-status-rate 0.002"
+    - dist: trusty
+      env: ROS_DISTRO=indigo  ROSWS=wstool BUILDER=catkin   USE_DEB=false NOT_TEST_INSTALL=true EXTRA_DEB="ros-indigo-convex-decomposition ros-indigo-ivcon" CATKIN_TOOLS_BUILD_OPTIONS="--summarize --limit-status-rate 0.002"
+install:
+  # create another virtualenv to avoid https://github.com/travis-ci/travis-ci/issues/4948
+  - deactivate
+  - virtualenv --system-site-packages rosbuild
+  - source rosbuild/bin/activate
 before_script:
-  - export ROS_PARALLEL_JOBS="-j1 -l1"
-  - if [ "$ROS_DISTRO" == "indigo" ]; then export BEFORE_SCRIPT="echo \"ros-indigo-pepper-meshes ros-pepper-meshes/accepted-ros-pepper-meshes boolean true\" | sudo debconf-set-selections; sudo apt-get install -y -qq ros-$ROS_DISTRO-pepper-meshes; wget http://packages.ros.org/ros/ubuntu/pool/main/r/ros-indigo-naoqi-libqi/ros-indigo-naoqi-libqi_2.3.0-1trusty-20160109-140942-0800_amd64.deb; sudo dpkg -i --force-depends ros-indigo-naoqi-libqi_2.3.0-1trusty-20160109-140942-0800_amd64.deb; wget http://packages.ros.org/ros/ubuntu/pool/main/r/ros-indigo-naoqi-driver/ros-indigo-naoqi-driver_0.5.7-0trusty-20160203-170424-0800_amd64.deb; sudo dpkg -i --force-depends ros-indigo-naoqi-driver_0.5.7-0trusty-20160203-170424-0800_amd64.deb; wget http://packages.ros.org/ros/ubuntu/pool/main/r/ros-indigo-pepper-bringup/ros-indigo-pepper-bringup_0.1.7-0trusty-20160203-185926-0800_amd64.deb; sudo dpkg -i --force-depends ros-indigo-pepper-bringup_0.1.7-0trusty-20160203-185926-0800_amd64.deb; wget http://packages.ros.org/ros/ubuntu/pool/main/r/ros-indigo-pepper-robot/ros-indigo-pepper-robot_0.1.7-0trusty-20160203-191535-0800_amd64.deb; sudo dpkg -i --force-depends ros-indigo-pepper-robot_0.1.7-0trusty-20160203-191535-0800_amd64.deb; sudo apt-get install -y -f"; fi
-  # for deb in ros-indigo-naoqi-libqi_2.3.0-1trusty-20160109-140942-0800_amd64.deb ros-indigo-naoqi-driver_0.5.7-0trusty-20160203-170424-0800_amd64.deb ros-indigo-pepper-bringup_0.1.7-0trusty-20160203-185926-0800_amd64.deb ros-indigo-pepper-robot_0.1.7-0trusty-20160203-191535-0800_amd64.deb; do IFS='_' read -ra package <<< "$deb"; echo -n "wget http://packages.ros.org/ros/ubuntu/pool/main/r/$package/$deb; sudo dpkg -i --force-depends $deb; "; done
+  # to install pepper_meshes, nao_meshes, the licenses have to be accepted
+  - if [ "$ROS_DISTRO" == "indigo" ]; then export BEFORE_SCRIPT="echo \"ros-indigo-pepper-meshes ros-pepper-meshes/accepted-ros-pepper-meshes boolean true\" | sudo debconf-set-selections; sudo apt-get install -y -qq ros-$ROS_DISTRO-pepper-meshes"; fi
+  - if [ "$ROS_DISTRO" == "indigo" ]; then export BEFORE_SCRIPT="echo \"ros-indigo-nao-meshes ros-nao-meshes/accepted-ros-nao-meshes boolean true\" | sudo debconf-set-selections; sudo apt-get install -y -qq ros-$ROS_DISTRO-nao-meshes"; fi
 script: source .travis/travis.sh
