--- a/jsk_naoqi_robot/jsk_pepper_startup/package.xml
+++ b/jsk_naoqi_robot/jsk_pepper_startup/package.xml
@@ -12,26 +12,21 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  <run_depend>dynamic_reconfigure</run_depend>
+  <run_depend>image_view</run_depend>
   <run_depend>joy</run_depend>
-  <run_depend>naoqi_apps</run_depend>
-  <run_depend>naoqi_bridge</run_depend>
+  <run_depend>naoqi_bridge_msgs</run_depend>
   <run_depend>naoqi_dashboard</run_depend>
   <run_depend>naoqi_pose</run_depend>
-  <run_depend>nao_apps</run_depend>
-  <run_depend>nao_interaction_launchers</run_depend>
   <run_depend>nao_interaction_msgs</run_depend>
   <run_depend>pepper_bringup</run_depend>
-  <run_depend>pepper_description</run_depend>
-  <run_depend>topic_tools</run_depend>
-  <run_depend>teleop_twist_joy</run_depend>
-  <run_depend>image_view</run_depend>
   <run_depend>roseus</run_depend>
   <run_depend>rostwitter</run_depend>
+  <run_depend>sensor_msgs</run_depend>
+  <run_depend>std_msgs</run_depend>
+  <run_depend>std_srvs</run_depend>
+  <run_depend>teleop_twist_joy</run_depend>
 
   <test_depend>rostest</test_depend>
   <test_depend>roslaunch</test_depend>
-
-  <export>
-  </export>
-
 </package>
