--- a/jsk_pr2_robot/jsk_pr2_startup/package.xml
+++ b/jsk_pr2_robot/jsk_pr2_startup/package.xml
@@ -23,9 +23,6 @@
   <build_depend>jsk_network_tools</build_depend>
   <!-- <build_depend>pr2_move_base</build_depend> -->
   <!-- <build_depend>pr2_2dnav</build_depend> -->
-  <!-- <build_depend>pr2_navigation_self_filter</build_depend> -->
-  <!-- <build_depend>pr2_navigation_teleop</build_depend> -->
-  <!-- <build_depend>pr2_navigation_slam</build_depend> -->
   <build_depend>pr2_base_trajectory_action</build_depend>
   <!-- <build_depend>pr2_arm_navigation_perception</build_depend> -->
   <build_depend>pr2_gripper_sensor_action</build_depend>
@@ -66,10 +63,7 @@
   <run_depend>face_recognition</run_depend>
   <run_depend>semantic_point_annotator</run_depend>
   <run_depend>pr2_gazebo</run_depend>
-  <run_depend>pr2_navigation</run_depend>
   <run_depend>eusurdf</run_depend>
-  <run_depend>pr2_navigation_perception</run_depend>
-  <run_depend>pr2_navigation_config</run_depend>
   <run_depend>jsk_maps</run_depend>
   <run_depend>jsk_android_gui_api9</run_depend>
   <run_depend>face_recognition</run_depend>
@@ -79,6 +73,10 @@
   <run_depend>pr2_tuck_arms_action</run_depend>
   <run_depend>safe_teleop_base</run_depend>
   <run_depend>pr2_teleop_general</run_depend>
+  <run_depend>pr2_navigation_config</run_depend>
+  <run_depend>pr2_navigation_global</run_depend>
+  <run_depend>pr2_navigation_perception</run_depend>
+  <run_depend>pr2_navigation_self_filter</run_depend>
 
   <export>
     <rqt_gui plugin="${prefix}/plugin.xml"/>
