--- a/jsk_fetch_robot/jsk_fetch_startup/package.xml
+++ b/jsk_fetch_robot/jsk_fetch_startup/package.xml
@@ -15,6 +15,7 @@
   <run_depend>jsk_maps</run_depend>
   <run_depend>jsk_pr2_startup</run_depend>
   <run_depend>fetch_navigation</run_depend>
+  <run_depend>fetch_driver_msgs</run_depend>
   <run_depend>rviz</run_depend>
   <run_depend>tf2_ros</run_depend>
 
