add nao_bringup to run depend

--- a/jsk_naoqi_robot/jsk_nao_startup/package.xml
+++ b/jsk_naoqi_robot/jsk_nao_startup/package.xml
@@ -50,6 +50,7 @@
   <run_depend>roseus</run_depend>
   <run_depend>rostwitter</run_depend>
   <run_depend>jsk_robot_startup</run_depend>
+  <run_depend>nao_bringup</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
