--- a/jsk_robot_common/jsk_robot_startup/package.xml
+++ b/jsk_robot_common/jsk_robot_startup/package.xml
@@ -7,14 +7,9 @@
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>mongodb_store</build_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>rospy</build_depend>
   <build_depend>roseus</build_depend>
-  <build_depend>diagnostic_msgs</build_depend>
-  <build_depend>pr2_mechanism_controllers</build_depend>
-  <build_depend>sensor_msgs</build_depend>
   <build_depend>dynamic_reconfigure</build_depend>
+  <build_depend>message_generation</build_depend>
   <run_depend>actionlib_msgs</run_depend>
   <run_depend>dynamic_reconfigure</run_depend>
   <run_depend>geometry_msgs</run_depend>
@@ -30,11 +25,12 @@
   <run_depend>tf</run_depend>
   <run_depend>tf2_ros</run_depend>
   <run_depend>tf2_py</run_depend>
+  <run_depend>message_runtime</run_depend>
+  <run_depend>roseus_mongo</run_depend>
+  <run_depend>pr2eus</run_depend>
 
   <test_depend>pr2_gazebo</test_depend>
-  <test_depend>pr2eus</test_depend>
   <test_depend>rostest</test_depend>
-  <test_depend>roseus_mongo</test_depend>
   <export>
   </export>
 </package>
