--- a/jsk_naoqi_robot/jsk_pepper_startup/config/global_costmap_params.yaml
+++ b/jsk_naoqi_robot/jsk_pepper_startup/config/global_costmap_params.yaml
@@ -1,7 +1,7 @@
 global_costmap:
   #Set the global and robot frames for the costmap
   global_frame: /map
-  robot_base_frame: base_link
+  robot_base_frame: /base_footprint2
 
   #Set the update and publish frequency of the costmap
   update_frequency: 5.0
