--- a/.travis.yml
+++ b/.travis.yml
@@ -21,15 +21,23 @@ env:
     - ROS_PARALLEL_TEST_JOBS="-j4"
     - CATKIN_PARALLEL_TEST_JOBS="-p1"
   matrix:
-    - ROS_DISTRO=hydro   USE_DEB=true
-    - ROS_DISTRO=hydro   USE_DEB=false NOT_TEST_INSTALL=true EXTRA_DEB="ros-hydro-convex-decomposition ros-hydro-ivcon"
+    - ROS_DISTRO=hydro    USE_DEB=true
+    - ROS_DISTRO=hydro    USE_DEB=false NOT_TEST_INSTALL=true EXTRA_DEB="ros-hydro-convex-decomposition ros-hydro-ivcon"
     - ROS_DISTRO=indigo   USE_DEB=true
     - ROS_DISTRO=indigo   USE_DEB=false NOT_TEST_INSTALL=true EXTRA_DEB="ros-indigo-convex-decomposition ros-indigo-ivcon"
+    - ROS_DISTRO=jade     USE_DEB=true
+    - ROS_DISTRO=jade     USE_DEB=false NOT_TEST_INSTALL=true EXTRA_DEB="ros-jade-convex-decomposition ros-jade-ivcon"
+    - ROS_DISTRO=kinetic  USE_DEB=true
+    - ROS_DISTRO=kinetic  USE_DEB=false NOT_TEST_INSTALL=true EXTRA_DEB="ros-kinetic-convex-decomposition ros-kinetic-ivcon"
 matrix:
   fast_finish: true
   allow_failures:
-    - env: ROS_DISTRO=hydro   USE_DEB=false NOT_TEST_INSTALL=true EXTRA_DEB="ros-hydro-convex-decomposition ros-hydro-ivcon"
+    - env: ROS_DISTRO=hydro    USE_DEB=false NOT_TEST_INSTALL=true EXTRA_DEB="ros-hydro-convex-decomposition ros-hydro-ivcon"
     - env: ROS_DISTRO=indigo   USE_DEB=false NOT_TEST_INSTALL=true EXTRA_DEB="ros-indigo-convex-decomposition ros-indigo-ivcon"
+    - env: ROS_DISTRO=jade     USE_DEB=true
+    - env: ROS_DISTRO=jade     USE_DEB=false NOT_TEST_INSTALL=true EXTRA_DEB="ros-jade-convex-decomposition ros-jade-ivcon"
+    - env: ROS_DISTRO=kinetic  USE_DEB=true
+    - env: ROS_DISTRO=kinetic  USE_DEB=false NOT_TEST_INSTALL=true EXTRA_DEB="ros-kinetic-convex-decomposition ros-kinetic-ivcon"
 before_script:
   # to install pepper_meshes, nao_meshes, the licenses have to be accepted
   - if [ "$ROS_DISTRO" == "indigo" ]; then export BEFORE_SCRIPT="echo \"ros-indigo-pepper-meshes ros-pepper-meshes/accepted-ros-pepper-meshes boolean true\" | sudo debconf-set-selections; sudo apt-get install -y -qq ros-$ROS_DISTRO-pepper-meshes"; fi
