jsk_fetch_startup/package.xml: missing joy, topic_tools, fetch_teleop depends

--- a/jsk_fetch_robot/jsk_fetch_startup/package.xml
+++ b/jsk_fetch_robot/jsk_fetch_startup/package.xml
@@ -27,6 +27,9 @@
   <!-- for fetch teleop -->
   <run_depend>fetch_bringup</run_depend>
   <run_depend>safe_teleop_base</run_depend>
+  <run_depend>joy</run_depend>
+  <run_depend>topic_tools</run_depend>
+  <run_depend>fetch_teleop</run_depend>
 
   <test_depend>rostest</test_depend>
 
