fetch_gazebo_bringup.launch and fetch_teleop.xml both starts cmd_vel_mux, add roslaunch_add_file_check  fetch_gazebo_bringup.launch

--- a/jsk_fetch_robot/jsk_fetch_startup/CMakeLists.txt
+++ b/jsk_fetch_robot/jsk_fetch_startup/CMakeLists.txt
@@ -35,6 +35,7 @@ if(CATKIN_ENABLE_TESTING)
   #roslaunch_add_file_check(launch/fetch_bringup.launch launch_teleop:=false)
   roslaunch_add_file_check(test/roslaunch-check-fetch_bringup.xml)
   roslaunch_add_file_check(launch/rviz.launch)
+  roslaunch_add_file_check(launch/fetch_gazebo_bringup.launch)
   set(roslaunch_check_script ${roslaunch_DIR}/../scripts/roslaunch-check)
 endif()
 
