Revert duplicated commits

--- a/jsk_pr2_robot/jsk_pr2_desktop/pr2_jsk_startup.sh.in
+++ b/jsk_pr2_robot/jsk_pr2_desktop/pr2_jsk_startup.sh.in
@@ -1,21 +1,23 @@
-#!/bin/bash -i
-
+#!/bin/bash
+set +e
 PR2_NAME=$1
 if [ "$1" == "" ]; then PR2_NAME="pr1012"; fi
 shift
 
-rossetip
-rossetmaster $PR2_NAME
+HOST_NAME=$(hostname)
+export PS1=@USER_NAME@
+source ~/.bashrc
 
+export ROS_IP=`LANGUAGE=en LANG=C LC_ALL=C ifconfig  | grep 'inet addr:'| grep -v '127.0.0.1' | cut -d: -f2 | awk '{ print $1}'`
+export ROS_MASTER_URI=http://$@BLANK@{PR2_NAME}:11311
 ## for desktop
 sleep 1
-rosrun @PR2_DASHBOARD_EXE@ @PR2_DASHBOARD_EXE@ &
+rosrun pr2_dashboard pr2_dashboard &
 if [ "$ROS_DISTRO" = "fuerte" ]; then
-  CFG_SUFFIX=vcg
-else
-  CFG_SUFFIX=rviz
+    xterm -sb -rightbar -sl 99999 +s -title "RVIZ ($@BL@{PR2_NAME})" -e "rosrun rviz rviz -d $(rospack find jsk_pr2_startup)/config/jsk_startup.vcg" &
+elif [ "$ROS_DISTRO" = "groovy" ]; then
+    xterm -sb -rightbar -sl 99999 +s -title "RVIZ ($@BL@{PR2_NAME})" -e "rosrun rviz rviz -d $(rospack find jsk_pr2_startup)/config/jsk_startup.rviz" &
 fi
-xterm -sb -rightbar -sl 99999 +s -title "RVIZ ($@BL@{PR2_NAME})" -e /bin/bash -l -i -c "rosrun rviz rviz -d $(rospack find jsk_pr2_startup)/config/jsk_startup.$CFG_SUFFIX" &
 
 ## for robot
 sleep 1
