--- a/jsk_pr2_robot/jsk_pr2_desktop/detect_cans_demo.sh.in
+++ b/jsk_pr2_robot/jsk_pr2_desktop/detect_cans_demo.sh.in
@@ -1,6 +1,13 @@
-#!/bin/bash -i
+#!/bin/bash
+set +e
 
-rosrun @PR2_DASHBOARD_EXE@ @PR2_DASHBOARD_EXE@ &
+export PS1=@USER_NAME@
+source ~/.bashrc
+
+## for desktop
+sleep 1
+rosrun pr2_dashboard pr2_dashboard &
+# xterm -sb -rightbar -sl 99999 +s -title "RVIZ" -e 'export PS1=applications; source ~/.bashrc; rosrun rviz rviz -d $(rospack find jsk_pr2_startup)/config/jsk_startup.vcg' &
 
 ## for robot
 sleep 1
