--- a/jsk_pr2_robot/jsk_pr2_desktop/pr2_teleop_robot.sh.in
+++ b/jsk_pr2_robot/jsk_pr2_desktop/pr2_teleop_robot.sh.in
@@ -1,11 +1,15 @@
-#!/bin/bash -i
-
+#!/bin/bash
+set +e
 PR2_NAME=$1
 if [ "$1" == "" ]; then PR2_NAME="pr1012"; fi
 shift
 
-rossetip
-rossetmaster $PR2_NAME
+HOST_NAME=$(hostname)
+export PS1=@USER_NAME@
+source ~/.bashrc
+
+export ROS_IP=`LANGUAGE=en LANG=C LC_ALL=C ifconfig  | grep 'inet addr:'| grep -v '127.0.0.1' | cut -d: -f2 | awk '{ print $1}'`
+export ROS_MASTER_URI=http://$@BLANK@{PR2_NAME}:11311
 
 ## for robot
 sleep 1
