--- a/jsk_pr2_robot/jsk_pr2_desktop/rviz.sh.in
+++ b/jsk_pr2_robot/jsk_pr2_desktop/rviz.sh.in
@@ -1,16 +1,19 @@
-#!/bin/bash -i
-
+#!/bin/bash
+set +e
 PR2_NAME=$1
-if [ "$1" = "" ]; then PR2_NAME="pr1012"; fi
+if [ "$1" == "" ]; then PR2_NAME="pr1012"; fi
 shift
 
-rossetip
-rossetmaster $PR2_NAME
+HOST_NAME=$(hostname)
+export PS1=@USER_NAME@
+source ~/.bashrc
 
-if [ "@ROS_DISTRO@" = "fuerte" ]; then
-  CFG_SUFFIX=vcg
-else
-  CFG_SUFFIX=rviz
+export ROS_IP=`LANGUAGE=en LANG=C LC_ALL=C ifconfig  | grep 'inet addr:'| grep -v '127.0.0.1' | cut -d: -f2 | awk '{ print $1}'`
+export ROS_MASTER_URI=http://$@BLANK@{PR2_NAME}:11311
+## for desktop
+sleep 1
+if [ "$ROS_DISTRO" = "fuerte" ]; then
+    rosrun rviz rviz -d $(rospack find jsk_pr2_startup)/config/jsk_startup.vcg
+elif [ "$ROS_DISTRO" = "groovy" ]; then
+    rosrun rviz rviz -d $(rospack find jsk_pr2_startup)/config/jsk_startup.rviz
 fi
-
-exec rosrun rviz rviz -d "$(rospack find jsk_pr2_startup)/config/jsk_startup.$CFG_SUFFIX"
