--- a/jsk_robot_common/jsk_robot_startup/package.xml
+++ b/jsk_robot_common/jsk_robot_startup/package.xml
@@ -3,7 +3,7 @@
   <name>jsk_robot_startup</name>
   <version>1.1.0</version>
   <description>The jsk_robot_startup package</description>
-  <maintainer email="inagaki@todo.todo">inagaki</maintainer>
+  <maintainer email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</maintainer>
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
@@ -30,6 +30,10 @@
   <run_depend>tf</run_depend>
   <run_depend>tf2_ros</run_depend>
   <run_depend>tf2_py</run_depend>
+
+  <test_depend>rostest</test_depend>
+  <test_depend>pr2_gazebo</test_depend>
+
   <export>
   </export>
 </package>
