--- a/jsk_robot_common/jsk_robot_startup/package.xml
+++ b/jsk_robot_common/jsk_robot_startup/package.xml
@@ -7,6 +7,7 @@
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>jsk_topic_tools</build_depend>
   <build_depend>mongodb_store</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
@@ -20,7 +21,9 @@
   <run_depend>geometry_msgs</run_depend>
   <run_depend>gmapping</run_depend>
   <run_depend>jsk_recognition_msgs</run_depend>
+  <run_depend>jsk_topic_tools</run_depend>
   <run_depend>mongodb_store</run_depend>
+  <run_depend>nodelet</run_depend>
   <run_depend>pointcloud_to_laserscan</run_depend>
   <run_depend>posedetection_msgs</run_depend>
   <run_depend>roscpp</run_depend>
@@ -37,5 +40,6 @@
   <test_depend>pr2_gazebo</test_depend>
 
   <export>
+    <nodelet plugin="${prefix}/lifelog_nodelet_plugins.xml" />
   </export>
 </package>
