run test/fetch-moveit.test, only when fetch_gazebo package is found

--- a/jsk_fetch_robot/fetcheus/CMakeLists.txt
+++ b/jsk_fetch_robot/fetcheus/CMakeLists.txt
@@ -60,7 +60,10 @@ install(FILES fetch.dae fetch.l fetch-interface.l fetch-utils.l fetch.yaml DESTI
 if(CATKIN_ENABLE_TESTING)
   find_package(catkin REQUIRED COMPONENTS rostest)
   add_rostest(test/fetcheus.test)
-  add_rostest(test/fetch-moveit.test)
+  find_package(fetch_gazebo QUIET)
+  if(fetch_gazebo_FOUND)
+    add_rostest(test/fetch-moveit.test)
+  endif()
 endif()
 
 
