run test/naoqieus.test, only when when naoqi_msgs package is found

--- a/jsk_naoqi_robot/naoqieus/CMakeLists.txt
+++ b/jsk_naoqi_robot/naoqieus/CMakeLists.txt
@@ -5,7 +5,11 @@ find_package(catkin REQUIRED rostest diagnostic_aggregator nao_interaction_msgs 
 
 catkin_package(CFG_EXTRAS compile_naoqi_model.cmake)
 
-if(NOT "$ENV{ROS_DISTRO}" STREQUAL "hydro") ## naoqi_bridge_msg is only for >= indigo
+## naoqi_bridge_msg is only for >= indigo
+find_package(nao_interaction_msgs QUIET)
+find_package(naoqi_bridge_msgs QUIET)
+if(nao_interaction_msgs_FOUND AND naoqi_bridge_msgs_FOUND)
+
   add_rostest(test/naoqieus.test)
 
 install(DIRECTORY test
