jsk_robot_startup: disabled test

--- a/jsk_robot_common/jsk_robot_startup/CMakeLists.txt
+++ b/jsk_robot_common/jsk_robot_startup/CMakeLists.txt
@@ -25,7 +25,6 @@ install(DIRECTORY lifelog util
 
 if(CATKIN_ENABLE_TESTING)
   find_package(rostest REQUIRED)
-  if("$ENV{ROS_DISTRO}" STRGREATER "hydro")
-    add_rostest(lifelog/test/logger_pr2.test KINECT1=true)
-  endif()
+  # Disabled since cannot set environment variables for rostest for now.
+  # add_rostest(lifelog/test/logger_pr2.test)
 endif()
