jsk_robot_startup: add url for reason to disable test

--- a/jsk_robot_common/jsk_robot_startup/CMakeLists.txt
+++ b/jsk_robot_common/jsk_robot_startup/CMakeLists.txt
@@ -26,5 +26,6 @@ install(DIRECTORY lifelog util
 if(CATKIN_ENABLE_TESTING)
   find_package(rostest REQUIRED)
   # Disabled since cannot set environment variables for rostest for now.
+  # see https://github.com/PR2/pr2_simulator/pull/126
   # add_rostest(lifelog/test/logger_pr2.test)
 endif()
