--- a/jsk_robot_common/jsk_robot_startup/package.xml
+++ b/jsk_robot_common/jsk_robot_startup/package.xml
@@ -16,6 +16,7 @@
   <build_depend>pr2_mechanism_controllers</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>dynamic_reconfigure</build_depend>
+  <build_depend>urdf</build_depend>
   <run_depend>actionlib_msgs</run_depend>
   <run_depend>dynamic_reconfigure</run_depend>
   <run_depend>geometry_msgs</run_depend>
@@ -35,6 +36,7 @@
   <run_depend>tf2_ros</run_depend>
   <run_depend>tf2_py</run_depend>
   <run_depend>tf2_geometry_msgs</run_depend>
+  <run_depend>urdf</run_depend>
 
   <test_depend>rostest</test_depend>
   <test_depend>pr2_gazebo</test_depend>
