jsk_robot_startup: lightweight_logger: add original publisher name as _meta.published_by

--- a/jsk_robot_common/jsk_robot_startup/CMakeLists.txt
+++ b/jsk_robot_common/jsk_robot_startup/CMakeLists.txt
@@ -46,12 +46,14 @@ target_link_libraries(jsk_robot_lifelog
   ${Boost_LIBRARIES}
   ${OpenCV_LIBRARIES}
   ${catkin_LIBRARIES})
+add_dependencies(jsk_robot_lifelog ${PROJECT_NAME}_gencpp)
 
 add_executable(joint_states_throttle
   src/joint_states_throttle_node.cpp)
 target_link_libraries(joint_states_throttle
   ${Boost_LIBRARIES}
   ${catkin_LIBRARIES})
+add_dependencies(joint_states_throttle ${PROJECT_NAME}_gencpp)
 
 install(DIRECTORY lifelog util
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
